[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/GUI/dialogue/DialoguePanel.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/Window.png" type="Texture" id=2]
[ext_resource path="res://assets/visual/enemy.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 677.553, 220.58 ), Vector2( 677.553, 230.58 ) ]
}

[node name="DialoguePanel" type="Control" groups=[
"DialogueGroup",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 481.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.886275, 0.784314, 0.784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -150.0
margin_bottom = -20.0

[node name="NPCLabel" type="Label" parent="."]
margin_left = 85.1524
margin_top = -20.8921
margin_right = 235.152
margin_bottom = 19.1079
text = "Name"
align = 1
valign = 1

[node name="PanelBox" type="HBoxContainer" parent="."]
margin_left = 61.0
margin_top = 34.0
margin_right = 886.0
margin_bottom = 252.0

[node name="DialogueContents" type="RichTextLabel" parent="PanelBox"]
margin_right = 637.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelBox"]
margin_left = 641.0
margin_right = 671.0
margin_bottom = 218.0
rect_min_size = Vector2( 30, 0 )

[node name="ActionContainer" type="VBoxContainer" parent="PanelBox"]
margin_left = 675.0
margin_right = 825.0
margin_bottom = 218.0

[node name="ChatButton" type="TextureButton" parent="PanelBox/ActionContainer"]
margin_right = 150.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 55 )
texture_normal = ExtResource( 2 )
expand = true

[node name="ChatLabel" type="Label" parent="PanelBox/ActionContainer/ChatButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chat"
align = 1
valign = 1

[node name="NothingButton" type="TextureButton" parent="PanelBox/ActionContainer"]
margin_top = 59.0
margin_right = 150.0
margin_bottom = 114.0
rect_min_size = Vector2( 150, 55 )
texture_normal = ExtResource( 2 )
expand = true

[node name="NothingLabel" type="Label" parent="PanelBox/ActionContainer/NothingButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nothing"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="Indicator" type="Sprite" parent="."]
position = Vector2( 677.553, 227.656 )
rotation = 3.14159
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Indicator"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
[connection signal="pressed" from="PanelBox/ActionContainer/NothingButton" to="." method="_on_NothingButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
